test/type-error-1.ktn
// TODO(strager): Improve error reporting.

define bar<a> (a [a] -> char):
  ->x; [x] 1 kitten::intrinsic::addInt
